<resources>
    <string name="app_name">Astrology Quiz</string>
    <string name="greeting">Welcome to Astrology Quiz!</string>
    <string name="user_name">Please, enter your name</string>
    <string name="submitSign">Submit Answers</string>
    <string name="reset">Try again!</string>
    <string name="close">Close</string>


    <string name="correctanswer">Your answer is correct!</string>
    <string name="wronganswer">Your answer is wrong!</string>

    <string name="user_name_hint">YOUR NAME</string>

    <string name="question_01">What is the colors of Leo?</string>
    <string name="q01a">Gold</string>
    <string name="q01b">Green</string>
    <string name="q01c">Purple</string>
    <string name="q01d">Black</string>

    <string name="question_02">Which astrological sign has the characteristics of being scattered?</string>
    <string name="q02_hint">SIGN</string>
    <string name="help_text_q2">Please, write an astrological sign here</string>
    <string name="wronganswer_02_gemini">Your answer is wrong! The correct answer is: GEMINI.</string>

    <string name="question_03">Where would Taurus likes to live?</string>
    <string name="q03a">country house</string>
    <string name="q03b">downtown apartment</string>
    <string name="q03c">town house with large garden</string>
    <string name="q03d">residential area</string>
    <string name="help_text_q3">More solutions are possible</string>


    <string name="question_04">Which Sign is associated with this symbol?</string>
    <string name="q04a">Gemini</string>
    <string name="q04b">Aries</string>
    <string name="q04c">Virgo</string>
    <string name="q04d">Libra</string>

    <string name="question_05">Which season is associated with Capricorn?</string>
    <string name="q05a">Summer</string>
    <string name="q05b">Autumn</string>
    <string name="q05c">Spring</string>
    <string name="q05d">Winter</string>

    <string name="question_06">Which element is associated with Cancer?</string>
    <string name="q06a">Earth</string>
    <string name="q06b">Fire</string>
    <string name="q06c">Water</string>
    <string name="q06d">Air</string>

    <string name="question_07">Which symbol is associated with the planet Neptune?</string>

    <string name="question_08">Which Astrological sign belongs to the foot? </string>
    <string name="q08a">Pisces</string>
    <string name="q08b">Sagittarius</string>
    <string name="q08c">Scorpio</string>
    <string name="q08d">Aquarius</string>

    <string name="question_09">Which characteristic best describe the planet Sun? </string>
    <string name="q09a">Vitality</string>
    <string name="q09b">Creativity</string>
    <string name="q09c">Sensitivity</string>
    <string name="q09d">Aggression</string>
    <string name="help_text_q9">More solutions are possible</string>

    <string name="question_10">Which characteristics best describe Scorpio?</string>
    <string name="q10a">indecisive, charming, harmonious</string>
    <string name="q10b">communicative, tense, versatile</string>
    <string name="q10c">manipulative, forceful, jelaous</string>
    <string name="q10d">cheerful, tactless, intellectual</string>
    <string name="q02_answer_text">GEMINI</string>
    <string name="result_zero">Try again!</string>
    <string name="result_ten">Congratulations! You are amazing!</string>
    <string name="result_low">Congartulations!</string>
    <string name="user_invocation">Dear</string>
    <string name="result_score">Your score is:</string>


</resources>
