<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context="com.example.android.astrologyquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            style="@style/name"
            android:text="@string/user_name" />

        <EditText
            style="@style/user_name"
            android:id="@+id/user_name"
            android:hint="@string/user_name_hint" />


        <!-- Question 01  -->
        <TextView
            style="@style/question_header"
            android:background="@color/color_yellow"
            android:text="@string/question_01"
            />

        <TextView
            android:id="@+id/resultTxt_01"
            style="@style/result_text"
            android:text="Answer is..."
             />

        <RadioGroup
            android:id="@+id/q01_radiogroup"
            style="@style/q01_08_10_RadioGroup">

            <RadioButton
                android:id="@+id/q01_Answer"
                style="@style/q01_RadioButton"
                android:text="@string/q01a"/>

            <RadioButton
                android:id="@+id/q01_btn_2"
                style="@style/q01_RadioButton"
                android:text="@string/q01b"
                />

            <RadioButton
                android:id="@+id/q01_btn_3"
                style="@style/q01_RadioButton"
                android:text="@string/q01c" />

            <RadioButton
                android:id="@+id/q01_btn_4"
                style="@style/q01_RadioButton"
                android:text="@string/q01d" />
        </RadioGroup>

        <!-- Question 02  -->

        <TextView
            style="@style/question_header"
            android:background="@color/color_pink"
            android:text="@string/question_02" />

        <TextView
            android:id="@+id/resultTxt_02"
            style="@style/result_text"
            android:text="Answer is..."
            />

        <EditText
            style="@style/q02_edittext"
            android:id="@+id/q02_answer"
            android:hint="@string/q02_hint"
             />

        <TextView
            style="@style/help_text"
            android:text="@string/help_text_q2" />

        <!-- Question 03  -->

        <TextView
            style="@style/question_header"
            android:background="@color/color_green"
            android:text="@string/question_03" />

        <TextView
            style="@style/help_text03"
            android:text="@string/help_text_q3" />

        <TextView
            android:id="@+id/resultTxt_03"
            style="@style/result_text"
            android:text="Answer is..."
            />

        <CheckBox
            style="@style/q03_checkbox"
            android:id="@+id/q03_Answer_a"
            android:text="@string/q03a"
            android:button="@drawable/checkbox_green"/>

        <CheckBox
            style="@style/q03_checkbox"
            android:id="@+id/q03_Answer_b"
            android:text="@string/q03b"
            android:button="@drawable/checkbox_green"/>

        <CheckBox
            style="@style/q03_checkbox"
            android:id="@+id/q03_Answer_c"
            android:text="@string/q03c"
            android:button="@drawable/checkbox_green"/>

        <CheckBox
            style="@style/q03_checkbox"
            android:layout_marginBottom="@dimen/header_pad_bottom"
            android:id="@+id/q03_Answer_d"
            android:text="@string/q03d"
            android:button="@drawable/checkbox_green"/>

        <!-- Question 04  -->

        <TextView
            style="@style/question_header"
            android:background="@color/color_red"
            android:text="@string/question_04" />
        <TextView
        android:id="@+id/resultTxt_04"
        style="@style/result_text"
        android:text="Answer is..."
        />

        <ImageView
            android:src="@drawable/aries"
            android:scaleType="centerCrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_gravity="center_horizontal"
            />


        <RadioGroup
            android:id="@+id/q04_radiogroup"
            style="@style/q04_07_RadioGroup">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            <RadioButton
                style="@style/q04_RadioButton"
                android:id="@+id/q04_btn_1"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/q04a"
                android:onClick="Answer04_Click_RadioGroup_Simulation"
                />

            <RadioButton
                style="@style/q04_RadioButton"
                android:id="@+id/q04_Answer"
                android:layout_row="0"
                android:layout_column="1"
                android:onClick="Answer04_Click_RadioGroup_Simulation"
                android:text="@string/q04b"
                />

            <RadioButton
                style="@style/q04_RadioButton"
                android:id="@+id/q04_btn_3"
                android:layout_row="1"
                android:layout_column="0"
                android:onClick="Answer04_Click_RadioGroup_Simulation"
                android:text="@string/q04c" />

            <RadioButton
                style="@style/q04_RadioButton"
                android:id="@+id/q04_btn_4"
                android:layout_row="1"
                android:layout_column="1"
                android:onClick="Answer04_Click_RadioGroup_Simulation"
                android:text="@string/q04d" />
            </GridLayout>

        </RadioGroup>


        <!-- Question 05  -->

        <TextView
            style="@style/question_header"
            android:background="@color/color_dark_blue"
            android:text="@string/question_05" />

        <ImageView
            android:src="@drawable/bak_tel"
            android:scaleType="center"
            android:paddingLeft="0sp"
            android:paddingRight="0sp"
            android:paddingTop="0sp"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:scaleX ="1"
            android:scaleY ="1"
            android:adjustViewBounds="true"
            />

        <TextView
            android:id="@+id/resultTxt_05"
            style="@style/result_text"
            android:text="Answer is..."
            />

        <RadioGroup
            android:id="@+id/q05_radiogroup"
            style="@style/q05_06_RadioGroup">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    android:id="@+id/q05_btn_1"
                    style="@style/q05_RadioButton"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:onClick="Answer05_Click_RadioGroup_Simulation"
                    android:text="@string/q05a"/>

                <RadioButton
                    android:id="@+id/q05_btn_2"
                    style="@style/q05_RadioButton"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:onClick="Answer05_Click_RadioGroup_Simulation"
                    android:text="@string/q05b"
                    />

                <RadioButton
                    style="@style/q05_RadioButton"
                    android:id="@+id/q05_btn_3"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:onClick="Answer05_Click_RadioGroup_Simulation"
                    android:text="@string/q05c" />

                <RadioButton
                    style="@style/q05_RadioButton"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:id="@+id/q05_Answer"
                    android:onClick="Answer05_Click_RadioGroup_Simulation"
                    android:text="@string/q05d" />

            </GridLayout>
        </RadioGroup>

        <!-- Question 06  -->

        <TextView
            style="@style/question_header"
            android:background="@color/color_light_blue"
            android:text="@string/question_06"
            />
        <TextView
            android:id="@+id/resultTxt_06"
            style="@style/result_text"
            android:text="Answer is..."
            />

        <RadioGroup
            android:id="@+id/q06_radiogroup"
            style="@style/q05_06_RadioGroup">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    style="@style/q06_RadioButton"
                    android:id="@+id/q06_btn_1"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:onClick="Answer06_Click_RadioGroup_Simulation"
                    android:text="@string/q06a"/>

                <RadioButton
                    style="@style/q06_RadioButton"
                    android:id="@+id/q06_btn_2"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:onClick="Answer06_Click_RadioGroup_Simulation"
                    android:text="@string/q06b"
                    />

                <RadioButton
                    android:id="@+id/q06_Answer"
                    style="@style/q06_RadioButton"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:onClick="Answer06_Click_RadioGroup_Simulation"
                    android:text="@string/q06c" />

                <RadioButton
                    style="@style/q06_RadioButton"
                    android:id="@+id/q06_btn_4"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:onClick="Answer06_Click_RadioGroup_Simulation"
                    android:text="@string/q06d" />

            </GridLayout>
        </RadioGroup>

        <!-- Question 07  -->
        <TextView
            style="@style/question_header"
            android:background="@color/color_dark_blue"
            android:text="@string/question_07"
            android:layout_width="match_parent" />


        <TextView
            android:id="@+id/resultTxt_07"
            style="@style/result_text"
            android:text="Answer is..."
            />


        <RadioGroup
            android:id="@+id/q07_radiogroup"
            style="@style/q04_07_RadioGroup">

                 <RadioButton
                    style="@style/q07_RadioButton"
                    android:id="@+id/q07_Answer"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:button="@drawable/radiobutton_sel_neptun_01"
                    android:onClick="Answer07_Click_RadioGroup_Simulation"
                    />

                <RadioButton
                    style="@style/q07_RadioButton"
                    android:id="@+id/q07_btn_2"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:button="@drawable/radiobutton_sel_neptun_02"
                    android:onClick="Answer07_Click_RadioGroup_Simulation"
                    />

                <RadioButton
                    style="@style/q07_RadioButton"
                    android:id="@+id/q07_btn_3"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:button="@drawable/radiobutton_sel_neptun_03"
                    android:onClick="Answer07_Click_RadioGroup_Simulation"
                    />

                <RadioButton
                    style="@style/q07_RadioButton"
                    android:id="@+id/q07_btn_4"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:button="@drawable/radiobutton_sel_neptun_04"
                    android:onClick="Answer07_Click_RadioGroup_Simulation"
                    />

        </RadioGroup>

        <!-- Question 08  -->
        <TextView
            style="@style/question_header"
            android:background="@color/color_purple"
            android:text="@string/question_08"
            android:layout_width="match_parent" />

        <ImageView
            android:src="@drawable/pisces"
            android:scaleType="center"
            android:paddingLeft="0sp"
            android:paddingRight="0sp"
            android:paddingTop="0sp"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:scaleX ="1"
            android:scaleY ="1"

            android:adjustViewBounds="true"
            />


        <TextView
            android:id="@+id/resultTxt_08"
            style="@style/result_text"
            android:text="Answer is..."
            />

        <RadioGroup
            android:id="@+id/q08_radiogroup"
            style= "@style/q01_08_10_RadioGroup">

            <RadioButton
                android:id="@+id/q08_Answer"
                style="@style/q08_RadioButton"
                android:text="@string/q08a"/>

            <RadioButton
                android:id="@+id/q08_btn_2"
                style="@style/q08_RadioButton"
                android:text="@string/q08b"
                />

            <RadioButton
                android:id="@+id/q08_btn_3"
                style="@style/q08_RadioButton"
                android:text="@string/q08c" />

            <RadioButton
                android:id="@+id/q08_btn_4"
                style="@style/q08_RadioButton"
                android:text="@string/q08d" />
        </RadioGroup>

        <!-- Question 09  -->

        <TextView
            style="@style/question_header"
            android:background="@color/color_yellow"
            android:text="@string/question_09" />

        <TextView
            style="@style/help_text03"
            android:text="@string/help_text_q3" />

        <TextView
            android:id="@+id/resultTxt_09"
            style="@style/result_text"
            android:text="Answer is..."
            />

        <CheckBox
            style="@style/q09_checkbox"
            android:id="@+id/q09_Answer_a"
            android:text="@string/q09a"
            android:button="@drawable/checkbox_sun"/>

        <CheckBox
            style="@style/q09_checkbox"
            android:id="@+id/q09_Answer_b"
            android:text="@string/q09b"
            android:button="@drawable/checkbox_sun"/>

        <CheckBox
            style="@style/q09_checkbox"
            android:id="@+id/q09_Answer_c"
            android:text="@string/q09c"
            android:button="@drawable/checkbox_sun"/>

        <CheckBox
            style="@style/q09_checkbox"
            android:id="@+id/q09_Answer_d"
            android:text="@string/q09d"
            android:button="@drawable/checkbox_sun"/>


        <!-- Question 10  -->
        <TextView
            style="@style/question_header"
            android:background="@color/color_dark_red"
            android:text="@string/question_10"
            android:layout_width="match_parent" />

        <ImageView
            android:src="@drawable/scorpio"
            android:scaleType="centerCrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16sp"
            android:paddingRight="16sp"
            android:paddingTop="16sp"
            android:layout_gravity="center_horizontal"
            />


        <TextView
            android:id="@+id/resultTxt_10"
            style="@style/result_text"
            android:text="Answer is..."
            />

        <RadioGroup
            android:id="@+id/q10_radiogroup"
            style="@style/q01_08_10_RadioGroup">

            <RadioButton
                android:id="@+id/q10_btn_1"
                style="@style/q10_RadioButton"
                android:text="@string/q10a"/>

            <RadioButton
                android:id="@+id/q10_btn_2"
                style="@style/q10_RadioButton"
                android:text="@string/q10b"
                />

            <RadioButton
                android:id="@+id/q10_Answer"
                style="@style/q10_RadioButton"
                android:text="@string/q10c" />

            <RadioButton
                android:id="@+id/q10_btn_4"
                style="@style/q10_RadioButton"
                android:text="@string/q10d" />
        </RadioGroup>


        <!-- Astrology Quiz submit -->
        <Button
            style="@style/button"
            android:id="@+id/submit_sign"
            android:text="@string/submitSign"/>

        <Button
            style="@style/button"
            android:id="@+id/reset"
            android:text="@string/reset"/>

    </LinearLayout>

    </ScrollView>